1.0.2 - not released yet


1.0.1 - released 2016-08-10

Bug fixes:
- [#5753] Misleading Exception type for missing mapper class


1.0.0 - released 2016-07-18

Features:
- [#5736] Update Emogrifier
- [#5734] Add a php-cs-fixer configuration
- [#5453] Add unit tests for XLIFF language files
- [#5654] Add ClassAliasMap file for autoloading
- [#5653] Add a configuration for PDF rendering of the manual
- [#5239] Add a composer.json

Bug fixes:
- [#5730] Fix deprecation log warnings in TYPO3 7LTS
- [#5696] Framework crashes with Redis rootline cache
- [#5691] Warning about headers already sent when running the tests
- [#5683] E-mail salutation is in German even for English BE
- [#5668] 1:n associations also load deleted models
- [#5661] Fix the static-info-tables dependency in the composer.json
- [#5411] Test failure if no FE user records are in the DB
- [#5505] Drop autoload-dev
- [#5467] Skip storage_pid related tests for TYPO3 7
- [#5412] Port changes from phpunit to oelib
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5735] Use the short array syntax
- [#5731] Fix code inspection warnings
- [#5067] Make the TCA cacheable
- [#5704] Remove any references to t3lib in the documentation
- [#5701] Use vfsStream for checking foreign files
- [#5360] Reformat the code to PSR-2
- [#5658] Replace "language" in the PHPDoc
- [#5657] Remove the byte order mark from the ReST files
- [#5508] Use Tx_Oelib_Model_BackEndUser::class
- [#5509] Use Tx_Oelib_Model_BackEndUserGroup::class
- [#5473] Rename tx_oelib_configurationProxy to Tx_Oelib_ConfigurationProxy
- [#5408] Drop version-specific code and class_exists
- [#5407] Drop the old XCLASS footers

Changes:
- [#5732] Deprecate the Double3Validator
- [#5507] Rename tx_oelib_Mapper_BackEndUser to Tx_Oelib_Mapper_BackEndUser
- [#5501] Rename tx_oelib_Interface_GeocodingLookup to Tx_Oelib_Interface_GeocodingLookup
- [#5500] Rename tx_oelib_Interface_MapPoint to Tx_Oelib_Interface_MapPoint